logs/terminal-1.log
ADMIN@JOEM-MSI MINGW64 ~/Desktop/developerFiles/ProjectFinmark
$ # Install enhanced setup
npm run setup

# Generate network topology
npm run topology

# Start network monitoring  
npm run monitor

# Simulate FinMark traffic
npm run simulate-finmark

# Generate comprehensive reports
npm run generate-reports

> finmark-network-lab-setup@1.0.0 setup
> node setup/install-dependencies.js

node:internal/modules/cjs/loader:1404
  throw err;
  ^

Error: Cannot find module 'C:\Users\ADMIN\Desktop\developerFiles\ProjectFinmark\setup\install-dependencies.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1401:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1057:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1062:22)
    at Function._load (node:internal/modules/cjs/loader:1211:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.16.0

> finmark-network-lab-setup@1.0.0 topology
> node tools/network-topology-generator.js

node:internal/modules/cjs/loader:1404
  throw err;
  ^

Error: Cannot find module 'fs-extra'
Require stack:
- C:\Users\ADMIN\Desktop\developerFiles\ProjectFinmark\tools\network-topology-generator.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1401:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1057:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1062:22)
    at Function._load (node:internal/modules/cjs/loader:1211:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (C:\Users\ADMIN\Desktop\developerFiles\ProjectFinmark\tools\network-topology-generator.js:1:12)
    at Module._compile (node:internal/modules/cjs/loader:1730:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [
    'C:\\Users\\ADMIN\\Desktop\\developerFiles\\ProjectFinmark\\tools\\network-topology-generator.js'
  ]
}

Node.js v22.16.0

> finmark-network-lab-setup@1.0.0 monitor
> node monitoring/network-monitor.js

node:internal/modules/cjs/loader:1404
  throw err;
  ^

Error: Cannot find module 'C:\Users\ADMIN\Desktop\developerFiles\ProjectFinmark\monitoring\network-monitor.js'
    at Function._resolveFilename (node:internal/modules/cjs/loader:1401:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1057:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1062:22)
    at Function._load (node:internal/modules/cjs/loader:1211:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}

Node.js v22.16.0

> finmark-network-lab-setup@1.0.0 simulate-finmark
> node tools/packet-capture-simulator.js && node tools/traffic-generator.js

C:\Users\ADMIN\Desktop\developerFiles\ProjectFinmark\tools\packet-capture-simulator.js:15
  async startCapture(interface = 'Wi-Fi', duration = 30) {
                     ^^^^^^^^^

SyntaxError: Unexpected strict mode reserved word
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.16.0

> finmark-network-lab-setup@1.0.0 generate-reports
> npm run packet-capture && npm run topology


> finmark-network-lab-setup@1.0.0 packet-capture
> node tools/packet-capture-simulator.js

C:\Users\ADMIN\Desktop\developerFiles\ProjectFinmark\tools\packet-capture-simulator.js:15
  async startCapture(interface = 'Wi-Fi', duration = 30) {
                     ^^^^^^^^^

SyntaxError: Unexpected strict mode reserved word
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49
    at node:internal/main/run_main_module:36:49

Node.js v22.16.0

Node.js v22.16.0